--- a/RLStats/Pages/Index.cshtml
+++ b/RLStats/Pages/Index.cshtml
@@ -13,7 +13,7 @@
         <form method="post">
             <h1 class="display-4"><b>RL STATS</b></h1>
             <p></p>
-            <br><label for="lname"><b>Email:</b></label>
+            <br><label for="ename"><b>Email:</b></label>
             <input type="email" name="emailaddress">
             <br><label for="fname"><b>Username:</b></label>
             <input type="text" name="uname">
